@@ -1,3 +1,5 @@
+make sure dtmfinband gets initialized
+make gk-identifier and gk-interface settings optional (documentation sayed that about gk-identifier already)
 fix race condition on destroying signaling thread in h323 library
 Adds an extra switch_rtp_destroy or switch_rtp_release_port when a session ends 
     - to make sure the port is returned to FS. thx to Peter Olsson.
